--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
         </nav>
     </header>
     <!-- Jumbotron -->
-    <section>
-        <div>
+    <section class="hero">
+        <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will schedule a consult</p>
             <!-- Create The Form-->
             <form>
                 <label for="name">Enter Full Name:</label>
-                <input type="text" placeholder="Your Name" name="name" id="name"/>
+                <input class="form-input" type="text" placeholder="Your Name" name="name" id="name"/>
                 <label for="email">Enter Email Address:</label>
-                <input type="text" placeholder="Email Address" name="email" id="email"/>
+                <input class="form-input" type="email" placeholder="Email Address" name="email" id="email"/>
                 <label for="phone">Enter a Telephone Number:</label>
-                <input type="text" placeholder="Phone Number" name="phone" id="phone"/>
+                <input class="form-input" type="tel" placeholder="Phone Number" name="phone" id="phone"/>
                 <p>
                     Have you worked out with a trainer before?
                     <input type="radio" name="trainer-confirm" id="trainer-yes"/>
