adjusted contact feature

--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
               
                   <button type="submit">Submit</button>
                 </form>
-              </div>
+            </div>
+            <div>
                 <h3>Run Buddy</h3>
                 <p> 
                     Any questions or concerns before signing up?
