--- a/index.html
+++ b/index.html
@@ -84,15 +84,21 @@
     </section>
     <!-- What we do -->
     <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border">What We Do</h2>
-        <p>
-            butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-        </p>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">What We Do</h2>
+        </div>
+        <div>
+            <p>
+                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+            </p>
+        </div>
     </section>
 
     <!-- What You Do-->
     <section id="what-you-do" class="steps"> 
-        <h2 class="section-title secondary-border">What You Do</h2>
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">What You Do</h2>
+        </div>
         <div>
             <img src="./assets/images/step-1.svg" alt="" /> <!-- Setting alt="" Tells screen readers to ignore it-->
             <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
