--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <li>
                     <a href="#reach-out">Reach Out</a>
                 </li>
+                <li>
+                    <a href="#service-plans">Service Plans</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -191,7 +194,17 @@
             </article>
         </div>  
     </section>
-
+    <!-- Services pricing grid-->
+    <section id="service-plans" class="services">
+        <div class="service-grid-container">
+            <div class="service-grid-item">One</div>
+            <div class="service-grid-item">Two</div>
+            <div class="service-grid-item">Three</div>
+            <div class="service-grid-item">Four</div>
+            <div class="service-grid-item">Five</div>
+            <div class="service-grid-item">Six</div>
+        </div>
+    </section>
     <!-- Reach Out-->
     <section id="reach-out" class="contact">
         <h2 class="section-title secondary-border">Reach Out</h2>
