--- a/index.html
+++ b/index.html
@@ -162,8 +162,14 @@
     <section id="your-trainers" >
         <h2 class="section-title primary-border">Meet The Trainers</h2>
         <div class="trainers">
+            
             <article class="trainer">
-                <img src="assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class = "trainer-img trainer-1">
+                    <div>
+                        <h3 class="trainer-name">Arron Stephens</h3>
+                        <h4 class="trainer-role">Speed / Strength</h4>
+                    </div>
+                </div>
                 <div class="trainer-bio">
                     <h3 class="trainer-name">Arron Stephens</h3>
                     <h4 class="trainer-role">Speed / Strength</h4>
@@ -175,7 +181,12 @@
             </article>
             <!-- Trainer 2-->
             <article class="trainer">
-                <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                <div class="trainer-img trainer-2">
+                    <div>
+                        <h3 class="trainer-name">Joanna Gill</h3>
+                        <h4 class="trainer-role">Endurance</h4>
+                    </div>
+                </div>
                 <div class="trainer-bio">
                     <h3 class="trainer-name">Joanna Gill</h3>
                     <h4 class="trainer-role">Endurance</h4>
@@ -187,7 +198,12 @@
             </article>
             <!-- Trainer 3-->
             <article class="trainer">
-                <img src="assets/images/trainer-3.jpg" alt="Joanna Gill cooling off after a workout" />
+                <div class="trainer-img trainer-3">
+                    <div>
+                        <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                        <h4 class="trainer-role">Strength</h4>
+                    </div>
+                </div>
                 <div class="trainer-bio">
                     <h3 class="trainer-name">Harry "the Headband" Smith</h3>
                     <h4 class="trainer-role">Strength</h4>
